# wgpu_pp

./: Cargo.toml  LICENSE  README.md
fixtures/: basic.wgsl  comments_1.wgsl  comments_2.wgsl  define_1.wgsl  define_2.wgsl  define_3.wgsl  import_1.wgsl  import_2.wgsl  import_3.wgsl  macros_1.wgsl  macros_2.wgsl  macros_3.wgsl
fixtures/common/: import_4.wgsl
src/: lib.rs  preprocessor.rs
src/snapshots/: wgpu_pp__preprocessor__tests__basic.wgsl.snap  wgpu_pp__preprocessor__tests__comments_1.wgsl.snap  wgpu_pp__preprocessor__tests__comments_2.wgsl.snap  wgpu_pp__preprocessor__tests__define_1.wgsl.snap  wgpu_pp__preprocessor__tests__define_2.wgsl.snap  wgpu_pp__preprocessor__tests__define_3.wgsl.snap  wgpu_pp__preprocessor__tests__import_1.wgsl.snap  wgpu_pp__preprocessor__tests__import_2.wgsl.snap  wgpu_pp__preprocessor__tests__import_3.wgsl.snap  wgpu_pp__preprocessor__tests__macros_1.wgsl.snap  wgpu_pp__preprocessor__tests__macros_2.wgsl.snap  wgpu_pp__preprocessor__tests__macros_3.wgsl.snap
