[package]
name = "wgpu-pp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.5.0"
litrs = "0.4.1"
naga = { version = "22.1.0", features = ["wgsl-in"] }
regex = "1.10.6"

[dev-dependencies]
insta = "1.39.0"
